# demos

./: .gitignore  README.md  pom.xml
c/: README.md
c/algorithms/dynamic-programming/: ShortestPath.c  ShortestPath.md
c/algorithms/recursion/: CellDivision.c  FrogJump.c  HanoiTower.c  InvertBinaryTree.c  factorial.c  fibonacci.c
c/demos/fun/: HundredChickens.c
c/demos/libc-use/: qsort.c
c/demos/number/: NarcissisticNumber.c
c/include/: common.h
cpp/: CMakeLists.txt
cpp/include/: demos.h  header.h
cpp/src/demos/fun/: GuessNumber.cpp
cpp/tests/demos/fun/: test_GuessNumber.cpp
java/: README.md  pom.xml
java/src/main/resources/: log4j2.xml  oracle.ini
kotlin/: build.gradle  settings.gradle
python/src/com/sweetmanor/algorithm/csp/: csp.py  map_coloring.py  queens.py  send_more_money.py  word_search.py
python/src/com/sweetmanor/algorithm/fun/: Fibonacci.py
python/src/com/sweetmanor/algorithm/graph/: edge.py  graph.py  weighted_edge.py  weighted_graph.py
python/src/com/sweetmanor/algorithm/number/: CalculatePI.py
python/src/com/sweetmanor/algorithm/search/: generic_search.py  graph_search.py
python/src/com/sweetmanor/demo/: GeneCompressed.py  GeneSearch.py  StrSecret.py  maze.py  missionaries.py
python/src/com/sweetmanor/demo/lang/: LoadPath.py  LocaleCode.py
python/tests/com/sweetmanor/algorithm/search/: test_generic_search.py
src/main/java/com/sweetmanor/demo/: ChineseToCode.java  ConvertCharacter.java  ConvertMoney.java  Dom4jParse.java  GetCPUSerial.java  GregorianCalendar.java  JNAPrintf.java  LotteryDrawing.java  (+3 more)
(+402 files in other folders)
